2007-01-02  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPager.c (list_configure):
	fix updating window desk

2006-12-30  Ben Kibbey <bjk@luxsci.net>

	* FvwmGtk/dialog.c (dialog_entry):
	Fix entry widget options with no argv[1].

2006-12-29  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmForm/FvwmForm.c (ct_Timeout):
	fix parsing of quoted command in Timout

2006-12-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmProxy/FvwmProxy.c (GetProperty):
	64-bit fix

2006-12-22  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmProxy/FvwmProxy.c:
	Changed PROXY_GROUP_DEBUG define directive to False.

	(My_XNextEvent):
	Removed useless exit message.

	* FvwmProxy/FvwmProxy.c:
	* FvwmProxy/FvwmProxy.h:
	Corrected VIM modelines.

	* FvwmProxy/FvwmProxy.1.in:
	Documentation fixes.

2006-12-10  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmWinList/FvwmWinList.c (ProcessMessage):
	Add buttons when items are added to make sure the lists are synced.

	* FvwmWinList/ButtonArray.c (AddButton,ButtonNew):
	Allow buttons to be created with NULL title.

	* FvwmWinList/FvwmWinList.c (StartMeUp_I):
	Make sure that win is None until created.

	* FvwmWinList/ButtonArray.c (ButtonNew):
	Initialized alloced memory to 0.

2006-12-09  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmCommand/FvwmCommand.c (main):
	Fix reading lockfile.

2006-12-08  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPager.h:
	* FvwmPager/x_pager.c (do_scroll):
	* FvwmPager/FvwmPager.c (main, process_message, list_reply):
	Use Send_Reply instead of SendToModule to ease scroll burden.

	* FvwmCommand/FvwmCommand.1.in:
	* FvwmCommand/FvwmCommand.c (process_message):
	* FvwmCommand/FvwmCommandS.c (server, process_message):
	recieve messages from Send_Reply, and print them on -i1.

2006-11-25  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPager.c (handle_config_win_package, list_add)
	(list_configure):
	join almost duplicate code handing ConfigWinPacket to a separate